--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: MGS
 spring.datasource:
-  url: jdbc:hsqldb:file:db/mgs
+  url: jdbc:hsqldb:file:db/mgs;shutdown=true
   username: SA
 spring.jpa.hibernate.ddl-auto: update
 spring.jpa.show-sql: true
