--- a/server/pom.xml
+++ b/server/pom.xml
@@ -79,6 +79,9 @@
 							<includes>
 								<include>**/*</include>
 							</includes>
+							<excludes>
+								<exclude>css/**</exclude>
+							</excludes>
 							<followSymlinks>false</followSymlinks>
 						</fileset>
 					</filesets>
