--- a/ui/package.json
+++ b/ui/package.json
@@ -27,6 +27,8 @@
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "jquery": "^3.3.1",
+    "jqwidgets-scripts": "^5.6.0",
+    "ng2-tree": "^2.0.0-rc.9",
     "popper.js": "^1.12.9",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
