1. implement door proxy : mutual-ssl-auth, command exec. all TCP door change to use proxy 2. add rest api exception handling

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -17,7 +17,9 @@ mgs:
   door:
     proxy-server:
       port: 8443
-      thread-cnt: 20
+      accept-thread-cnt: 20
+      keystore:
+        password: changeme
     
 security.basic.enabled: false
 
