--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /server/testing data.txt
 /server/src/main/resources/static/*
 /door-proxy/doorproxy/.settings
+/proxy-common/.settings
+/server/db/*.lck
+.settings
