--- a/batch-scripts/pom.xml
+++ b/batch-scripts/pom.xml
@@ -10,12 +10,10 @@
 
 	<name>batch-scripts</name>
 	<description>MGS batch-scripts</description>
-
 	<parent>
-		<groupId>org.springframework.boot</groupId>
-		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<groupId>com.yyy</groupId>
+		<artifactId>mgs</artifactId>
+		<version>1.0-SNAPSHOT</version>
 	</parent>
 
 	<properties>
