--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,16 @@
     <modules>
         <module>ui</module>
         <module>server</module>
+        <module>door-proxy</module>
 		<module>batch-scripts</module>
+		<module>proxy-common</module>
     </modules>
     <packaging>pom</packaging>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.7.RELEASE</version>
+        <version>2.0.0.RELEASE</version>
     </parent>
 
   
