--- a/server/pom.xml
+++ b/server/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>com.yyy</groupId>
 	<artifactId>mgs-server</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>mgs-server</name>
@@ -27,6 +27,11 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>com.yyy</groupId>
+			<artifactId>proxy-common</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
