--- a/server/db/mgs.properties
+++ b/server/db/mgs.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.5
-#Mon Mar 12 12:02:58 CST 2018
+#Wed Mar 14 11:33:55 CST 2018
 version=2.3.5
-modified=no
+modified=yes
 tx_timestamp=0
