--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -20,6 +20,8 @@
     "src/**/*"
   ],
   "files": [
-    "node_modules/jqwidgets-scripts/jqwidgets-ts/angular_jqxtree.ts"
+    "node_modules/jqwidgets-scripts/jqwidgets-ts/angular_jqxtree.ts",
+    "node_modules/jqwidgets-scripts/jqwidgets-ts/angular_jqxtreegrid.ts",
+    "node_modules/jqwidgets-scripts/jqwidgets-ts/angular_jqxmenu.ts"
   ]
 }
