--- a/server/db/mgs.properties
+++ b/server/db/mgs.properties
@@ -1,5 +1,5 @@
 #HSQL Database Engine 2.3.5
-#Wed Mar 14 11:33:55 CST 2018
+#Wed Mar 14 12:43:25 CST 2018
 version=2.3.5
-modified=yes
+modified=no
 tx_timestamp=0
