1. change apache deamon to use jvm mode : use Bootstrap class to proxy the windows service start/stop to DoorProxyDeamon's main method. 2. change keystore location to the same as jar file.

--- a/door-proxy/src/main/resources/application.yml
+++ b/door-proxy/src/main/resources/application.yml
@@ -5,5 +5,5 @@ proxy:
     host: www.mgssys.xyz
     port: 8443
   trustStore:
-    path: ./src/main/resources/client-store.pkcs
+    path: ${keystore.path}
     password: changeme
