--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
 *.log
 *.log.*.bak
+*.pkcs
+*.jks
+*.pfx
+*.csr
+*.cer
 /server/.mvn
 /server/testing data.txt
 /server/src/main/resources/static/*
 /server/db/*.lck
 .settings
-/server/src/main/resources/*.jks
-/server/src/main/resources/*.pfx
-/door-proxy/src/main/resources/*.jks
-/door-proxy/src/main/resources/*.pkcs
 /door-proxy/doorproxy/target/
+/door-proxy/bin/door-proxy.jar
