second draft for aio proxy server.

--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -16,9 +16,11 @@ mgs:
       interval-hours: 1
   door:
     proxy-server:
+      io-mode: AIO
       port: 8443
       accept-thread-cnt: 1
-      read-timeout-secs: 60
+      read-timeout-secs: 10
+      read-timeout-secs: 10
       listener-thread-cnt: 10
       keep-alive-secs: 300
       keystore:
